--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -8,5 +8,5 @@ replication.factor=3
 min.insync.replicas=2
 enable.auto.commit=false
 bootstrap.servers=
-key.serializer=com.billionway.framework.kafka.codec.MessageEncoder
-value.serializer=com.billionway.framework.kafka.codec.MessageEncoder
+key.serializer=com.ntocc.framework.kafka.codec.MessageEncoder
+value.serializer=com.ntocc.framework.kafka.codec.MessageEncoder
