--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <version>2.0.4.RELEASE</version>
     </parent>
 
-    <groupId>com.billionway.framework</groupId>
+    <groupId>com.ntocc.framework</groupId>
     <artifactId>kafka-spring-boot-starter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>kafka-spring-boot-starter</name>
@@ -20,7 +20,7 @@
         <jdk.version>1.8</jdk.version>
         <jboss.marshalling.version>1.4.11.Final</jboss.marshalling.version>
         <spring.version>4.3.16.RELEASE</spring.version>
-        <kafka.version>2.0.0</kafka.version>
+        <kafka.version>2.2.0</kafka.version>
     </properties>
 
     <dependencies>
@@ -88,18 +88,33 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>artifactory</name>
+            <url>http://repo.chinawayltd.com/artifactory/libs-alls</url>
+        </repository>
+    </repositories>
+
     <distributionManagement>
         <repository>
-            <id>nexus-releases</id>
-            <name>nexus-releases</name>
-            <url>http://maven.billionway.cn:8081/repository/maven-releases/</url>
+            <id>repo.chinawayltd-r</id>
+            <name>dsp Release Repository</name>
+            <url>http://repo.chinawayltd.com/artifactory/ext-release-local/</url>
         </repository>
         <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>nexus-snapshots</name>
-            <url>http://maven.billionway.cn:8081/repository/maven-snapshots/</url>
+            <id>repo.chinawayltd-s</id>
+            <name>dsp Snapshot Repository</name>
+            <url>http://repo.chinawayltd.com/artifactory/ext-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <url>http://repo.chinawayltd.com/artifactory/libs-alls</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <pluginManagement>
