--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -1,9 +1,9 @@
 # kafka集群地址
 bootstrap.servers=
 # key 的解码器
-key.serializer=com.g7.framework.kafka.codec.MessageDecoder
+key.deserializer=com.g7.framework.kafka.codec.MessageDecoder
 # value 的解码器
-value.serializer=com.g7.framework.kafka.codec.MessageDecoder
+value.deserializer=com.g7.framework.kafka.codec.MessageDecoder
 # 自动提交位移
 enable.auto.commit=false
 # 当客户端出问题后间隔多少时间发现他出现了问题
