--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -13,7 +13,7 @@ max.poll.interval.ms=300000
 # 当无位移信息或位移越界时，kafka指定从最新的位移开始消费
 auto.offset.reset=latest
 # consumer单次获取消息的最大字节数
-fetch.max.bytes=
+fetch.max.bytes=10485760
 # 心跳时间
 heartbeat.interval.ms=100
 # kafka定期关闭空闲Socket连接
