--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -7,6 +7,10 @@ unclean.leader.election.enable=false
 replication.factor=3
 min.insync.replicas=2
 enable.auto.commit=false
+max.request.size=14000000
+batch.size=1048576
+request.timeout.ms=180000
+linger.ms=100
 bootstrap.servers=
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
