设置默认组

--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -18,3 +18,4 @@ fetch.max.bytes=10485760
 heartbeat.interval.ms=100
 # kafka定期关闭空闲Socket连接
 connections.max.idle.ms=-1
+group.id=consumer-default-group
