--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -1,21 +1,35 @@
 # kafka集群地址
 bootstrap.servers=
+
 # key 的解码器
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
 # value 的解码器
 value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
-# 自动提交位移
+
+# 关闭自动提交位移
 enable.auto.commit=false
-# 当客户端出问题后间隔多少时间发现他出现了问题
-session.timeout.ms=60000
-# 两次poll的最大间隔时间
+
+# 当客户端出问题后间隔多少时间发现他出现了问题 20秒
+session.timeout.ms=20000
+
+# 两次poll的最大间隔时间 5分钟
 max.poll.interval.ms=300000
+
 # 当无位移信息或位移越界时，kafka指定从最新的位移开始消费
 auto.offset.reset=latest
+
 # consumer单次获取消息的最大字节数
 fetch.max.bytes=10485760
-# 心跳时间
+
+# 心跳时间 毫秒
 heartbeat.interval.ms=100
+
 # kafka定期关闭空闲Socket连接
 connections.max.idle.ms=-1
+
+# 默认分组ID
 group.id=consumer-default-group
+
+# 重平衡分配策略
+partition.assignment.strategy=sticky
