--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -1,16 +1,49 @@
 # 无消息丢失的producer配置
-block.on.buffer.full=true
-acks=all
-retries=2147483647
-max.in.flight.requests.per.connection=1
-unclean.leader.election.enable=false
-replication.factor=3
-min.insync.replicas=2
-enable.auto.commit=false
-max.request.size=14000000
-batch.size=1048576
-request.timeout.ms=180000
-linger.ms=100
+
+# kafka集群地址
 bootstrap.servers=
+
+# key 的编码器
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+# value 的编码器
 value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+#
+block.on.buffer.full=true
+
+#
+acks=all
+
+# 重试次数
+retries=10
+
+# 设置为 1 防止同topic同分区下消息乱序问题
+max.in.flight.requests.per.connection=1
+
+# 关闭unclean leader选举模式，即不允许非ISR中的副本被选举为leader，从而避免broker端因日志水位截断而造成的消息丢失
+unclean.leader.election.enable=false
+
+# 副本数量，设置大于等于3
+replication.factor=3
+
+# 控制某条消息至少写入到ISR中的多少个副本才是成功 设置大于1
+min.insync.replicas=2
+
+# 关闭自动位移提交
+enable.auto.commit=false
+
+# 能够发送最大消息的大小
+max.request.size=10485760
+
+# 一次消息发送的最大容量
+batch.size=1048576
+
+# 消息发送延迟 单位毫秒，不完全要等到batch.size满了以后在发送
+linger.ms=100
+
+# 发送消息请求broker的最大超时时间 1分钟
+request.timeout.ms=60000
+
+# 消息压缩算法
+compression.type=lz4
