--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -33,10 +33,10 @@ min.insync.replicas=2
 # 关闭自动位移提交
 enable.auto.commit=false
 
-# 能够发送最大消息的大小
+# 能够发送最大消息的大小 10MB
 max.request.size=10485760
 
-# 一次消息发送的最大容量
+# 一次消息发送的最大容量 1MB
 batch.size=1048576
 
 # 消息发送延迟 单位毫秒，不完全要等到batch.size满了以后在发送
