--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -19,7 +19,7 @@ max.poll.interval.ms=300000
 # 当无位移信息或位移越界时，kafka指定从最新的位移开始消费
 auto.offset.reset=latest
 
-# consumer单次获取消息的最大字节数
+# consumer单次获取消息的最大字节数 10MB
 fetch.max.bytes=10485760
 
 # 心跳时间 毫秒
