--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -31,5 +31,5 @@ connections.max.idle.ms=-1
 # 默认分组ID
 group.id=consumer-default-group
 
-# 读取消息的隔离等级
+# 读取消息的隔离等级 读取非事务消息、提交的事务消息 buffer未提交的事务消息 过滤终止的事务消息
 isolation.level=read_committed
