--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>spring-context</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.g7.framework</groupId>
+            <artifactId>ntocc-trace</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <repositories>
