--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
         </dependency>
         <dependency>
             <groupId>com.g7.framework</groupId>
+            <artifactId>cat-spring-boot-autoconfigure</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.g7.framework</groupId>
             <artifactId>common-util</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
