设置消费者组重平衡策略

--- a/src/main/resources/consumer.properties
+++ b/src/main/resources/consumer.properties
@@ -33,3 +33,6 @@ group.id=consumer-default-group
 
 # 读取消息的隔离等级 读取非事务消息、提交的事务消息 buffer未提交的事务消息 过滤终止的事务消息
 isolation.level=read_committed
+
+# consumer group重平衡,分区分配策略
+partition.assignment.strategy=org.apache.kafka.clients.consumer.StickyAssignor
