--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>spring-context</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.g7.framework</groupId>
             <artifactId>ntocc-trace</artifactId>
             <version>1.0.1-SNAPSHOT</version>
