--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.8</jdk.version>
         <jboss.marshalling.version>1.4.11.Final</jboss.marshalling.version>
+        <log4j2.version>2.17.0</log4j2.version>
     </properties>
 
     <dependencies>
